# YuaLLM

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: providers.md  routing.md  scoring.md
tests/: test_analytics.py  test_budget.py  test_notifier.py  test_providers.py  test_router.py  test_scorer.py
yua/: __init__.py  cli.py
yua/alerts/: notifier.py
yua/analytics/: leaderboard.py
yua/budget/: cost_calculator.py
yua/providers/: __init__.py  base.py
yua/router/: llm_router.py
yua/scorer/: quality_scorer.py
